add gc log to windows service